# cackle

./: CMakeLists.txt
src/: audioqueue.hpp  config.hpp  discoverysocket.cpp  discoverysocket.hpp  encoder.cpp  encoder.hpp  endpoint.cpp  endpoint.hpp  jitterbuffer.hpp  main.cpp  mediasocket.cpp  mediasocket.hpp  rtppacket.hpp  voiceactivitydetector.cpp  voiceactivitydetector.hpp
